syntax = "proto3";
option go_package = "/;rpc";

package rpc;

//服务器类型
enum SERVICE{
    NONE = 0;
    CLIENT = 1;
    GATE = 2;
    GAME = 3;
    DB = 4;
};

//发送标志
enum SEND{
    POINT = 0;//指定集群id
    BOARD_CAST = 1;//广播
};

//rpc 包头
message RpcHead{
    int64 Id = 1;//token
    uint32 SocketId = 2;
    uint32 SrcClusterId = 3;//源集群id
    uint32 ClusterId = 4;//目标集群id
    SERVICE DestServerType = 5;//目标集群
    SEND SendType = 6;
    string ActorName = 7;
	string Reply = 8;//call sessionid
}

//rpc 包
message RpcPacket{
    string FuncName = 1;
    int32 ArgLen = 2;
    RpcHead RpcHead = 3;
    bytes RpcBody = 4;
}

//集群信息
message ClusterInfo{
    SERVICE Type = 1;
    string Ip = 2;
    int32 Port = 3;
    int32 Weight = 4;
    uint32 SocketId = 5;
}

//原始包
message Packet{
	uint32 Id = 1;//socketid
	string Reply = 2;//call sessionid
	bytes Buff = 3;//buff
	RpcPacket RpcPacket = 4;//rpc packet
}

//邮箱
message MailBox{
    int64  Id = 1;
    int64  LeaseId = 2;
    MAIL   MailType = 3;
    uint32 ClusterId = 5;//集群id
}

//玩法集群信息
message StubMailBox{
    int64  Id = 1;
    int64  LeaseId = 2;
    STUB   StubType = 3;
    uint32 ClusterId = 5;//集群id
}

//STUB类型
enum STUB{
    Master = 0;//master
    PlayerMgr = 1;//db
    AccountMgr = 2;//登录
    ChatMgr = 3;//聊天
    END = 4;
};

//邮件类型
enum MAIL{
    Player = 0;//player
};